# semlayer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml  cla.yml  nightly.yml  release.yml
docs/: ablation-m5.md  benchmark.md  context-priors.md  cost-model.md  drift-feed-slo.md  iceberg-bridge.md  quality-baseline.md  quickstart.md
docs/spikes/: fd-hierarchy.md
fixtures/: build.py  mirror_bigquery.py  mirror_snowflake.py
fixtures/context/: messy_mart_dictionary.csv  messy_mart_wiki.md
fixtures/cqs/: collision_heavy.yaml  eav.yaml  fan_trap.yaml  messy_mart.yaml  multi_tenant.yaml  obt.yaml  self_ref.yaml  snapshot_noval.yaml  tpcds_clean.yaml
fixtures/generators/: _bulk.py  collision_heavy.py  eav.py  fan_trap.py  messy_mart.py  multi_tenant.py  obt.py  self_ref.py  snapshot_noval.py  tpcds_clean.py
fixtures/golds/: collision_heavy.yaml  eav.yaml  fan_trap.yaml  messy_mart.yaml  multi_tenant.yaml  obt.yaml  self_ref.yaml  snapshot_noval.yaml  tpcds_clean.yaml
spec/: SPEC.md  VERSIONING.md  semantic-layer.schema.json
src/semlayer/: __init__.py  benchmark.py  cli.py  compile.py  context.py  drift.py  errors.py  init_cmd.py  mcp_server.py  pipeline.py  review.py  scoring.py  source.py  telemetry.py  validate.py
src/semlayer/connectors/: __init__.py  bigquery.py  snowflake.py
src/semlayer/cq/: __init__.py  answer.py  generate.py
src/semlayer/describe/: __init__.py  run.py
src/semlayer/enrich/: __init__.py  run.py
src/semlayer/export/: __init__.py  dbt.py
src/semlayer/link/: __init__.py  candidates.py  run.py  table_type.py  validate_llm.py
src/semlayer/llm/: __init__.py  provider.py
src/semlayer/ontology/: __init__.py  base.py
src/semlayer/profile/: __init__.py  llm_typing.py  run.py  stats.py  typing_rules.py
tests/: test_adversarial_small.py  test_adversarial_structural.py  test_bigquery_live.py  test_cli_extras.py  test_compile.py  test_context.py  test_cq_harness.py  test_cqs.py  test_describe.py  test_drift.py  test_enrich.py  test_fan_trap.py  test_fiscal.py  test_link.py  test_messy_mart.py  test_profile.py  test_review_mcp.py  test_snowflake_live.py  test_spec.py  test_tpcds_gold.py
(+2 files in other folders)
